ntop/ntop.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ntop
  namespace: default
  labels:
    app: ntop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntop
  template:
    metadata:
      name: ntop
      labels:
        app: ntop
      annotations:
          networks: calico
    spec:
      containers:
      - name: ntop
        imagePullPolicy: Always
        image: docker.io/vostro/ntopng
        ports:
        - containerPort: 3000
      - name: redis
        image: redis:4.0.9
        imagePullPolicy: Always
        ports:
        - name: cport-6379
          containerPort: 6379
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      nodeSelector:
        nodetype: worker
