ntop/ntop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntop-service
  namespace: default
  labels:
    app: ntop-service
spec:
  ports:
  - name: tcp-3000-3000
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: ntop
