ntop/ntop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ntop-ingress
 annotations:
   kubernetes.io/ingress.class: traefik
   # traefik.frontend.rule.type: PathPrefixStrip
   # ingress.kubernetes.io/auth-type: "basic"
   # ingress.kubernetes.io/auth-secret: "ingress-auth"
spec:
 rules:
  - host: physical.edcop.io
    http:
      paths:
      - backend: 
          serviceName: ntop-service
          servicePort: 3000
